# spoofspy

./: .dockerignore  .gitattributes  .gitignore  .overmind.env  Dockerfile-jobs  Procfile-jobs  README.md  deploy_jobs.ps1  fly.jobs.toml  monitor_celery_memory.py  monitor_celery_memory.sh  mypy.ini  pyproject.toml  run-jobs.sh
.fly/scripts/: kernel_opts.sh
spoofspy/: __init__.py  _version.py
spoofspy/api/: __init__.py  api.py  coding.py
spoofspy/coding/: __init__.py  coding.py
spoofspy/db/: __init__.py  db.py  models.py  queries.py  timescale.sql  trust_aggregate.sql
spoofspy/heuristics/: trust.py
spoofspy/jobs/: __init__.py  a2s.py  a2s_tasks.py  app.py  jobs.py  serialization.py  tasks.py  web.py
spoofspy/utils/: __init__.py  deployment.py
spoofspy/web/: __init__.py  web.py
